lesson23/k8s/diag.yml
apiVersion: v1
kind: Pod
metadata:
  name: diag-pod
  namespace: dev
spec:
  serviceAccountName: diag-sa
  containers:
    - name: diag
      image: bitnami/kubectl:latest
      command:
        - /bin/sh
        - -c
        - |
          while true; do
            echo "==== $(date) ===="
            kubectl get pods -n dev -l app=wordpress -o wide
            sleep 30
          done
